tests/ui/associated-inherent-types/issue-111879-0.stderr
error: overflow evaluating associated type `Carrier<'b>::Focus<i32>`
  --> $DIR/issue-111879-0.rs:9:25
   |
LL |     pub type Focus<T> = &'a mut for<'b> fn(Carrier<'b>::Focus<i32>);
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

